# django-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.local.yaml  compose.prod.yaml  compose.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  wiki.yml
app/: settings.py  urls.py
core/: admin.py
core/utils/: environment.py
docs/: cache.md  deployment.md  email.md  extending.md  roadmap.md
modules/core/: apps.py  signals.py
modules/core/admin/: __init__.py  auth.py
modules/core/templates/email/: password_setup.html  password_setup.txt
modules/core/templates/registration/: password_reset_complete.html  password_reset_confirm.html
modules/core/tests/: test_backend_settings.py  test_health.py  test_user_email.py
modules/core/views/: __init__.py
modules/samples/: apps.py
modules/samples/admin/: __init__.py  book.py
modules/samples/migrations/: 0001_initial.py  0002_alter_book_photo.py  0003_book_slug.py
modules/samples/models/: __init__.py  book.py
nginx/: nginx.conf  production.conf.template
samples/admin/: __init__.py  book.py
samples/migrations/: 0002_alter_book_photo.py
samples/models/: __init__.py  book.py
scripts/: create_module.py
wiki/: Architecture.md  Home.md  Quick-Start.md  _Sidebar.md
