[project]
name = "learn-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-unfold>=0.100.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
prod = [
    "gunicorn>=26.0.0",
]
