[project]
name = "learn-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-cleanup>=9.0.0",
    "django-environ>=0.14.0",
    "django-storages[boto3]>=1.14.6",
    "django-unfold>=0.100.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
prod = [
    "gunicorn>=26.0.0",
]
